fix: increase contrast

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -5,7 +5,7 @@
   z-index: 5;
   padding: 15px 0;
   margin-top: auto;
-  background: linear-gradient(to right, #009999, #007195);
+  background: linear-gradient(to right, #007f7f, #007195);
   display: flex;
   align-items: center;
   justify-content: space-around;
